# projector-ts-rust-go

./: Cargo.toml  README.md  conf.json  go.mod  jest.config.ts  opts.ts  package-lock.json  package.json
src/: config.rs  opts.rs  projector.rs
src/projector-go/cmd/: main.go
src/projector-go/pkg/projector/: config.go  config_test.go  ops.go  projector.go  projector_test.go
src/projector-rust/: opts.rs
src/projector-ts/: config.ts  index.ts  opts.ts  projector.ts
src/projector-ts/__test__/: config.spec.ts  projector.spec.ts
