[package]
name = "projector"
version = "0.1.0"
edition = "2021"

# Assuming your library is directly under src/, not nested
path = "src/bin/projector.rs"

[[bin]]
name = "projector"
path = "src/bin/projector.rs"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4.5.11", features = ["derive"] }
collection_macros = "0.2.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
